tests/snapshots/e2e__e2e_nested_object_json__js__n100.snap
---
source: tests/e2e.rs
expression: stdout
---
{
  "a": {
    "b": [ /* 3 more items */ ],
    "c": 1
  },
  "d": [ /* 2 more items */ ]
}
