tests/snapshots/e2e__e2e_nested_object_json__js__n1000.snap
---
source: tests/e2e.rs
expression: stdout
---
{
  "a": {
    "b": [
      "x",
      "y",
      "z"
    ],
    "c": 1
  },
  "d": [
    {
      "k": "v"
    },
    {
      "k": "w"
    }
  ]
}
